syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/Common.proto";

service LeasePropagationService {
	rpc DeliverLease(LeaseResponse) returns (google.protobuf.Empty);
}

message LeaseResponse  {
	int32 epoch = 1;
	repeated Lease leases = 2;
}
